# Marco-2.0

./: .gitignore  Cargo-web.toml  Cargo.toml  Dev Guidelines.txt  IMPLEMENTATION_PROGRESS.md  Marco 2.0 – Design & Architecture.txt  NODE_LIBRARY_STATUS.md  PHASE_3_COMPLETION_REPORT.md  PHASE_4_DEVELOPMENT_PLAN.md  PHASE_4_SPRINT_1_COMPLETION.md  PHASE_4_SPRINT_2_PLAN.md  PHASE_4_SPRINT_2_PROGRESS.md  PHASE_4_SPRINT_2_WEEK_2_PROGRESS.md  PHASE_4_SPRINT_3_PLAN.md  PHASE_4_SPRINT_3_WEEK_2_IMPLEMENTATION.md  PHASE_4_SPRINT_4_IMPLEMENTATION.md  Prompt Cues.txt  README.md  UI_ARCHITECTURE_ANALYSIS.md  VISUAL_INTEGRATION_COMPLETE.md  WGPU_MIGRATION_PLAN.md  cargo-check-analysis.md  warnings-analysis.md
.github/: copilot-instructions.md  powershell-commands.md
deployment/cdn/: cloudflare-worker.js
deployment/docker/: Dockerfile.production
deployment/nginx/: nginx-ssl.conf  nginx.conf
deployment/ssl/: docker-compose.ssl.yml  ssl-setup.sh
src/: lib.rs  main.rs  main_desktop.rs  main_graph_demo.rs  main_phase3_demo.rs  main_phase3_simple.rs  main_phase3_simple_demo.rs  main_phase3_standalone.rs  main_phase3_working.rs  main_web.rs
src/ai/: ai-assistant.ts  ai-learning-engine.ts  code-generation-engine.ts  nlp-processor.ts  prompt-engineering.ts  visual-logic-engine.ts
src/analytics/: analytics.ts  crash-reporter.ts  performance-analytics.ts
src/core/: mod.rs
src/demos/: mod.rs  phase3_dual_mode_demo.rs
src/devtools/: error_log.rs  mod.rs
src/ecosystem/: integration-manager.ts
src/features/: advanced-features.ts
src/graph/: mod.rs
src/loader/: autosave.rs
src/performance/: final-optimizer.ts  optimization-system.ts
src/plugins/: plugin-manager.ts
src/project/: manager.rs  mod.rs
src/render/: mod.rs  node_renderer.rs  wgpu_renderer.rs  wgpu_test.rs  wgpu_visual_editor.rs
src/renderer/: canvas.rs  context.rs  mod.rs  platform.rs  primitives.rs  text.rs
src/security/: auth.ts  csp.ts  headers.ts
src/system/: app_state.rs  comprehensive_demo.rs  integration_tests.rs  mod.rs  test_harness.rs
src/testing/: testing-framework.ts
src/ui/: app.rs  components.rs  cross_platform.rs  debug_overlay.rs  event.rs  gui_canvas.rs  gui_canvas_simple.rs  integrated_ide.rs  menu.rs  mobile_canvas.rs  mod.rs  node_editor.rs  node_library_panel.rs  property_panel.rs  responsive.rs  template_creator.rs  template_gallery.rs  theme.rs  theme_new.rs  title_bar.rs  touch.rs  utils.rs  visual_node_editor.rs  window.rs
src/web/: collaboration.ts  mod.rs  production-optimizer.ts  system-integration.ts  (+2 more)
tests/: test_expanded_nodes.rs  test_node_evaluation.rs
web/: build.js  enhanced-demo-sprint3.html  package.json  production-demo.html  tsconfig.json  webpack.config.js
(+77 files in other folders)
